syntax = "proto3";
import "google/protobuf/empty.proto";
package rhombus;

service Rhombus {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
